@@ -1,6 +1,7 @@
 package com.mobile.cpt.cpt_mobileapp.async;
 
 import android.app.Activity;
+import static com.mobile.cpt.cpt_mobileapp.Constant.*;
 import android.net.ConnectivityManager;
 import android.os.AsyncTask;
 import android.util.Log;
@@ -19,6 +20,7 @@ import java.net.URL;
 import java.net.URLEncoder;
 
 public class LoginAsync extends AsyncTask<String, String, LoginModel> {
+
     private Activity activity;
 
     public LoginAsync(Activity activity) {
@@ -28,55 +30,51 @@ public class LoginAsync extends AsyncTask<String, String, LoginModel> {
     @Override
     protected LoginModel doInBackground(String... arg0) {
         try {
-            if (InetAddress.getByName("http://cpt4cti.000webhostapp.com/login.php").isReachable(1000)) {
+            if (InetAddress.getByName(HTTP_LOGIN).isReachable(TIMEOUT)) {
                 String indexNo = arg0[0];
                 String password = arg0[1];
                 String link;
-                String data;
                 HttpURLConnection conn;
                 BufferedReader bufferedReader;
                 try {
-                    data = "?index_no=" + URLEncoder.encode(indexNo, "UTF-8");
-                    data += "&password=" + URLEncoder.encode(password, "UTF-8");
-                    link = "http://cpt4cti.000webhostapp.com/login.php" + data;
-                    Log.i("link", link);
+                    link = HTTP_LOGIN;
+                    link += ASK + INDEX_NO_EQ + URLEncoder.encode(indexNo, UTF_8);
+                    link += AND + PASSWORD_EQ + URLEncoder.encode(password, UTF_8);
+
+                    Log.i(LINK, link);
                     URL url = new URL(link);
-                    Log.i("URL", url.toString());
+                    Log.i(URL, url.toString());
                     conn = (HttpURLConnection) url.openConnection();
-                    conn.setConnectTimeout(1000);
+                    conn.setConnectTimeout(TIMEOUT);
                     conn.setDoInput(true);
                     conn.connect();
                     bufferedReader = new BufferedReader(new InputStreamReader(conn.getInputStream()));
                     String jsonStr = bufferedReader.readLine().toString();
                     JSONObject jsonObj = new JSONObject(jsonStr);
-                    Log.i("JSON", jsonObj.toString());
+                    Log.i(JSON, jsonObj.toString());
                     bufferedReader.close();
                     conn.disconnect();
                     if (jsonStr != null) {
-                        String login_status = (String) jsonObj.get("login_status");
-                        if (login_status.equals("true")) {
-                            Log.i("islogged", login_status);
-                            return new LoginModel(true, (String) jsonObj.get("user"));
+                        String login_status = (String) jsonObj.get(LOGIN_STATUS);
+                        if (login_status.equals(TRUE)) {
+                            Log.i(IS_LOGGED, login_status);
+                            return new LoginModel(true, (String) jsonObj.get(USER));
                         } else {
-                            Log.i("islogged", login_status);
-                            return new LoginModel(false, "");
+                            Log.i(IS_LOGGED, login_status);
+                            return new LoginModel(false, NULL_STRING);
                         }
                     } else {
-                        return new LoginModel(false, "");
+                        return new LoginModel(false, NULL_STRING);
                     }
                 } catch (Exception e) {
-                    return new LoginModel(false, "");
+                    return new LoginModel(false, NULL_STRING);
                 }
             } else {
-                Toast.makeText(activity.getApplicationContext(), "Brak połączenia z internetem",
-                        Toast.LENGTH_LONG).show();
+                return null;
             }
         } catch (IOException e) {
             e.printStackTrace();
         }
         return null;
     }
-
-
-
 }
